--- a/PhoBoV1.0.2
+++ b/PhoBoV1.0.2
@@ -1,4 +1,5 @@
 print("Hello, Baby <3")
+print("Close (P) toggle UI, Q: Bring Player, ShiftRight: Hide/Show")
 
 local Players = game:GetService("Players")
 local TweenService = game:GetService("TweenService")
@@ -23,7 +24,7 @@ local function C(class, props, parent)
     if parent then obj.Parent = parent end
     return obj
 end
--- ====== PROTECTION: basic anti-theft (edit ALLOWED_USER_IDS) ======
+-- ====== PROTECTION ======
 local PROTECT = true
 local ALLOWED_USER_IDS = { 
 	9002922877,
@@ -41,7 +42,7 @@ if PROTECT then
     end
 end
 
--- Themes & Fonts (modified colors)
+-- Themes & Fonts
 local Themes = {
     Dark = { Primary = Color3.fromRGB(24,24,30), Accent = Color3.fromRGB(145,145,145), Text = Color3.fromRGB(235,240,235), ButtonText = Color3.fromRGB(235,235,240) },
     Pink = { Primary = Color3.fromRGB(255,187,225), Accent = Color3.fromRGB(198,117,225), Text = Color3.fromRGB(50,50,50), ButtonText = Color3.fromRGB(240,240,240) },
@@ -160,7 +161,6 @@ local flyConn = nil
 local noclipConn = nil
 local allConns = {}
 
--- helper: tween all TextLabel/TextButton except toggleBtn
 local function tweenAllTexts(target)
     local tweens = {}
     for _, v in pairs(win:GetDescendants()) do
@@ -316,15 +316,90 @@ for name, _ in pairs(Themes) do
     b.MouseButton1Click:Connect(function() applyTheme(name) end)
 end
 
-local transRow = TabRow(1, "Transparency")
-local slider = C("Frame", { Parent = transRow, Size = UDim2.new(1,-130,1,0), Position = UDim2.new(0,130,0,0), BackgroundTransparency = 1 })
-local bar = C("Frame", { Parent = slider, Size = UDim2.new(1,0,0,6), Position = UDim2.new(0,0,0.5,-3), BackgroundColor3 = Color3.fromRGB(90,90,100), BorderSizePixel = 0 }, slider)
-C("UICorner", { CornerRadius = UDim.new(1,0) }, bar)
-local knob = C("Frame", { Parent = slider, Size = UDim2.fromOffset(14,14), Position = UDim2.new(0,0,0.5,-7), BackgroundColor3 = Color3.fromRGB(230,230,235), BorderSizePixel = 0 }, slider)
-C("UICorner", { CornerRadius = UDim.new(1,0) }, knob)
-local draggingKnob = false
+do
+    local transRow = TabRow(3, "Transparency")
+    local slider = C("Frame", {Parent = transRow, Size = UDim2.new(1,-180,1,0), Position = UDim2.new(0,130,0,0), BackgroundTransparency = 1}, transRow)
+    local bar = C("Frame", {Parent = slider, Size = UDim2.new(1,0,0,6), Position = UDim2.new(0,0,0.5,-3), BackgroundColor3 = Color3.fromRGB(90,90,100), BorderSizePixel = 0}, slider)
+    C("UICorner", {CornerRadius = UDim.new(1,0)}, bar)
+    local knob = C("Frame", {Parent = slider, Size = UDim2.fromOffset(14,14), Position = UDim2.new(0,0,0.5,-7), BackgroundColor3 = Color3.fromRGB(230,230,235), BorderSizePixel = 0}, slider)
+    C("UICorner", {CornerRadius = UDim.new(1,0)}, knob)
 
--- ====== SETTING TAB: Reset Script + Toggle UI ======
+    local percLabel = C("TextLabel", {Parent = transRow, Size = UDim2.new(0,60,1,0), Position = UDim2.new(1,-65,0,0), BackgroundTransparency = 1, Text = "0%", TextColor3 = Color3.fromRGB(220,220,230), Font = Enum.Font.Gotham, TextSize = 14}, transRow)
+
+    local dragging = false
+
+    local function updateMenuTransparency(value)
+        local alpha = value * 1
+        if win then
+            win.BackgroundTransparency = alpha
+        end
+        if header then
+            header.BackgroundTransparency = math.clamp(alpha - 0.1, 0, 1)
+        end
+        for _, v in pairs(win:GetDescendants()) do
+            if (v:IsA("TextLabel") or v:IsA("TextButton")) and v ~= toggleBtn then
+                pcall(function() v.TextTransparency = value end)
+            end
+            if v:IsA("GuiObject") and v ~= win and v ~= header then
+            end
+        end
+        percLabel.Text = tostring(math.floor(value * 100)) .. "%"
+        if stroke then
+            stroke.Thickness = 2 * (1 - value*0.6) + 0.5
+        end
+    end
+
+    local function setAlphaFromX(x)
+        if not bar or not knob then return end
+        local barPos = bar.AbsolutePosition.X
+        local barSize = bar.AbsoluteSize.X
+        if barSize == 0 then return end
+        local rel = math.clamp((x - barPos) / barSize, 0, 1)
+        knob.Position = UDim2.new(rel, -7, 0.5, -7)
+        updateMenuTransparency(rel)
+    end
+
+    spawn(function()
+        local tries = 0
+        while (bar.AbsoluteSize.X == 0) and tries < 50 do
+            tries = tries + 1
+            task.wait(0.02)
+        end
+        local initRel = 0
+        local barPos = bar.AbsolutePosition.X
+        local barSize = bar.AbsoluteSize.X
+        if barSize > 0 then
+            knob.Position = UDim2.new(initRel, -7, 0.5, -7)
+            updateMenuTransparency(initRel)
+        end
+    end)
+
+    table.insert(allConns, knob.InputBegan:Connect(function(i)
+        if i.UserInputType == Enum.UserInputType.MouseButton1 or i.UserInputType == Enum.UserInputType.Touch then
+            dragging = true
+        end
+    end))
+
+    table.insert(allConns, UserInputService.InputEnded:Connect(function(i)
+        if i.UserInputType == Enum.UserInputType.MouseButton1 or i.UserInputType == Enum.UserInputType.Touch then
+            dragging = false
+        end
+    end))
+
+    table.insert(allConns, UserInputService.InputChanged:Connect(function(i)
+        if dragging and (i.UserInputType == Enum.UserInputType.MouseMovement or i.UserInputType == Enum.UserInputType.Touch) then
+            setAlphaFromX(i.Position.X)
+        end
+    end))
+
+    table.insert(allConns, bar.InputBegan:Connect(function(i)
+        if i.UserInputType == Enum.UserInputType.MouseButton1 or i.UserInputType == Enum.UserInputType.Touch then
+            setAlphaFromX(i.Position.X)
+            dragging = true
+        end
+    end))
+end
+
 do
     local setRow = TabRow(3, "Reset Script")
     local resetBtn = C("TextButton", {
@@ -339,18 +414,6 @@ do
         TextSize = 14
     }, setRow)
     C("UICorner", { CornerRadius = UDim.new(0,8) }, resetBtn)
-
-    local hintLabel = C("TextLabel", {
-        Parent = setRow,
-        Size = UDim2.new(0, 300, 1, 0),
-        Position = UDim2.new(0, 0, 1, 5),
-        BackgroundTransparency = 1,
-        Text = "Phím P toggle toàn bộ UI; Slider hiển thị alpha hiện tại",
-        TextColor3 = Color3.fromRGB(220,220,220),
-        Font = Enum.Font.Gotham,
-        TextSize = 14,
-        TextXAlignment = Enum.TextXAlignment.Left
-    }, setRow)
 
     local resetDebounce = false
     local function resetAll()
@@ -381,7 +444,6 @@ do
             table.clear(_BOUND_ACTIONS)
         end
 
-        -- Huỷ hoặc ẩn UI chính nếu có 
         if win then
             pcall(function()
                 win:Destroy()
@@ -420,10 +482,10 @@ do
     end, false, Enum.KeyCode.P)
 end
 
-local fontRow = TabRow(1, "Font")
+local fontRow = TabRow(3, "Font")
 local fontBtn = C("TextButton", { Parent = fontRow, Size = UDim2.new(0,150,1,0), Position = UDim2.new(0,130,0,0), BackgroundColor3 = Color3.fromRGB(70,70,80), BorderSizePixel = 0, Text = "Next Font", TextColor3 = Color3.fromRGB(235,235,240), Font = Enum.Font.GothamMedium, TextSize = 14 }, fontRow)
 C("UICorner", { CornerRadius = UDim.new(0,8) }, fontBtn)
-local sizeRow = TabRow(1, "Size")
+local sizeRow = TabRow(3, "Size")
 local sizeBtn = C("TextButton", { Parent = sizeRow, Size = UDim2.new(0,150,1,0), Position = UDim2.new(0,130,0,0), BackgroundColor3 = Color3.fromRGB(70,70,80), BorderSizePixel = 0, Text = "Text +2", TextColor3 = Color3.fromRGB(235,235,240), Font = Enum.Font.GothamMedium, TextSize = 13 }, sizeRow)
 C("UICorner", { CornerRadius = UDim.new(0,8) }, sizeBtn)
 local fontIdx, textSize = 1, 18
@@ -709,8 +771,8 @@ local tpBox = C("TextBox", {
     Position = UDim2.new(0,130,0,0),
     BackgroundColor3 = Color3.fromRGB(70,70,80),
     BorderSizePixel = 0,
-    Text = "", -- để trống
-    PlaceholderText = "PlayerName", -- chỉ là gợi ý
+    Text = "",
+    PlaceholderText = "PlayerName",
     TextColor3 = Color3.fromRGB(235,235,240),
     Font = Enum.Font.Gotham,
     TextSize = 14,
@@ -752,9 +814,7 @@ tpBtn.MouseButton1Click:Connect(function()
     end
 end)
 
-
--- ====== ADDED: Fly (Misc) ======
-local flyRow = TabRow(2, "Fly")
+local flyRow = TabRow(1, "Fly")
 local flyBtn = C("TextButton", { Parent = flyRow, Size = UDim2.new(0,120,1,0), Position = UDim2.new(0,130,0,0), BackgroundColor3 = Color3.fromRGB(70,70,80), BorderSizePixel = 0, Text = "OFF", TextColor3 = Color3.fromRGB(235,235,240), Font = Enum.Font.GothamBold, TextSize = 14 }, flyRow)
 C("UICorner", { CornerRadius = UDim.new(0,8) }, flyBtn)
 local flySpeedLabel = C("TextLabel", { Parent = flyRow, Size = UDim2.new(0,60,1,0), Position = UDim2.new(0,260,0,0), BackgroundTransparency = 1, Text = "Speed: "..flySpeed, TextColor3 = Color3.fromRGB(220,220,230), Font = Enum.Font.Gotham, TextSize = 14 }, flyRow)
@@ -1254,7 +1314,7 @@ if charRemovingConn then table.insert(allConns, charRemovingConn) end
 
 if lp.Character then onCharacterAdded(lp.Character) end
 
--- ====== SETTING TAB: Reset Script (your button, improved) ======
+-- ====== SETTING TAB ======
 win = CreateMainUI()
 createTabs()
 do
@@ -1266,15 +1326,3 @@ ContextActionService:BindAction("ToggleUI_P", function(_, state)
 end, false, Enum.KeyCode.P)
 
 rebindAllKeyActions()
-
-local hintLabel = C("TextLabel", {
-    Parent = setRow,
-    Size = UDim2.new(1,0,0,18),
-    Position = UDim2.new(0,0,1,2),
-    BackgroundTransparency = 1,
-    Text = "Reset All: xóa UI, connections, coroutine. Close (P) toggle UI, Q: Bring Player",
-    TextColor3 = Color3.fromRGB(220,220,230),
-    Font = Enum.Font.Gotham,
-    TextSize = 14,
-    TextXAlignment = Enum.TextXAlignment.Left
-}, setRow)
